Added Twitter Bootstrap.

--- a/src/app/partials/partial1.html
+++ b/src/app/partials/partial1.html
@@ -6,7 +6,7 @@
 
  
 
-
+    <i class="icon-search"></i>
     <div ng-show="Facebook.fbResponse">
         <h4>Access Token:</h4>
         <p ng-bind="Facebook.fbResponse.accessToken"></p>
