updated to new seed

--- a/src/app/partials/partial1.html
+++ b/src/app/partials/partial1.html
@@ -1,18 +1,4 @@
-<div ng-controller = "MyCtrl1">
+<div>
 <p>This is the partial for view 1.</p>
 
-
-<button ng-click = "fbLogin()">test facebook</button>
-
- 
-
-    <i class="icon-search"></i>
-    <div ng-show="Facebook.fbResponse">
-        <h4>Access Token:</h4>
-        <p ng-bind="Facebook.fbResponse.accessToken"></p>
-    </div>
-	<button class='btn btn-small' ng-click="fbLogout()">Logout</button>
-
-    Cookie value: {{ accessToken }}
-    <button class='btn btn-small' ng-click="changeCookie()">OHNOESCOOKIENOOOOOO</button>
 </div>
