--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/css/base.css"/>
 
         <!-- Include javascript file that is a concatenated version of all third party .js files in /lib/thirdparty/ -->
-        <script src="/lib/js/thirdparty.js"></script>
+        <script src="/lib/js/third-party.js"></script>
 
         <!-- Include AngularJS source files -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
@@ -17,17 +17,10 @@
 
 	</head>
 	<body>
-		<div id='fb-root'></div>
-		<ul class="menu">
-			<li><a href="view1">view1</a></li>
-			<li><a href="view2">view2</a></li>
-			<li><a href="sign-in">sign-in</a></li>
-		</ul>
-
-		<div ng-view></div>
-
-		<div>Angular seed app: v<span app-version></span></div>
-
-
+		<div>
+            <div ng-include src = "'/partials/header.html'"></div>
+            <div ng-view></div>
+            <div ng-include src = "'/partials/footer.html'"></div>
+        </div>
 	</body>
 </html>
