--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,6 +1,8 @@
-<ul class="menu">
-    <li><a href="view1">Home</a></li>
-    <li><a href="view2">Blog</a></li>
-    <li>Portfolio</li>
-    <li>Contact Us</li>
-</ul>
+<div class = "full-height header">
+    <div class = "header-surround">
+        <div class = "header-box first-box">Home</div>
+        <div class = "header-box">Blog</div>
+        <div class = "header-box">Portfolio</div>
+        <div class = "header-box">Contact Us</div>
+    </div>
+</div>
