working vertical align, fucked up width

--- a/src/app/less/base/header.less
+++ b/src/app/less/base/header.less
@@ -2,16 +2,28 @@
   height: 50px;
   width: 50px;
   border: 2px solid black;
-  display: block;
-  vertical-align: middle;
 }
 
 .first-box{
 }
 
+.full-height{
+  position:absolute;
+  top:0;
+  left:0;
+  width:40%;
+  height:100%;
+}
+
+.table-container{
+  height:100%;
+  width:100%;
+  display:table;
+}
+
 .header-surround{
-  width: 100px;
-  border: 2px solid black;
-  height: 100%;
-  vertical-align: middle;
+  vertical-align:middle;
+  height:100%;
+  display:table-cell;
+  border:1px solid #000;
 }
