--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,8 +1,10 @@
 <div class = "full-height header">
-    <div class = "header-surround">
-        <div class = "header-box first-box">Home</div>
-        <div class = "header-box">Blog</div>
-        <div class = "header-box">Portfolio</div>
-        <div class = "header-box">Contact Us</div>
+    <div class = "table-container">
+        <div class = "header-surround">
+            <div class = "header-box first-box">Home</div>
+            <div class = "header-box">Blog</div>
+            <div class = "header-box">Portfolio</div>
+            <div class = "header-box">Contact Us</div>
+        </div>
     </div>
 </div>
