--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,10 +17,10 @@
 
 	</head>
 	<body>
-		<div class = "full-height">
-            <div class = "full-height" ng-include src = "'/partials/header.html'"></div>
-            <div class = "full-height" ng-view></div>
-            <div class = "full-height" ng-include src = "'/partials/footer.html'"></div>
+		<div class = "full-size">
+            <div class = "full-size" ng-include src = "'/partials/header.html'"></div>
+            <div class = "full-size" ng-view></div>
+            <div class = "full-size" ng-include src = "'/partials/footer.html'"></div>
         </div>
 	</body>
 </html>
