fixing up some stuff

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,9 +18,9 @@
 	</head>
 	<body>
 		<div class = "full-size">
-            <div class = "full-size" ng-include src = "'/partials/header.html'"></div>
-            <div class = "full-size" ng-view></div>
-            <div class = "full-size" ng-include src = "'/partials/footer.html'"></div>
+            <div class = "full-header" ng-include src = "'/partials/header.html'"></div>
+            <div class = "full-content" ng-view></div>
+            <!--<div class = "full-size" ng-include src = "'/partials/footer.html'"></div>-->
         </div>
 	</body>
 </html>
