--- a/src/app/less/base/app.less
+++ b/src/app/less/base/app.less
@@ -9,3 +9,15 @@ html, body{
   height: 100%;
   width: 100%;
 }
+
+.full-header{
+  height:100%;
+  width:10%;
+  float:left;
+}
+
+.full-content{
+  height:100%;
+  width:90%;
+  float:right;
+}
