--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,4 +1,4 @@
-<div class = "full-height header" ng-controller = "HeaderCtrl">
+<div class = "full-height" ng-controller = "HeaderCtrl">
     <div class = "table-container">
         <div class = "header-surround">
             <div ng-click = "makeActive()" ng-class = "{'header-box-clicked': active}" class = "header-box first-box">Home</div>
