--- a/src/app/less/base/header.less
+++ b/src/app/less/base/header.less
@@ -9,6 +9,7 @@
 }
 
 .header-box:hover{
+  cursor: pointer;
   height:75px;
   width: 75px;
   -webkit-transition: width 1s, height 1s;
@@ -30,11 +31,12 @@
 }
 
 .full-height{
-  position:absolute;
   top:0;
   left:0;
   width:10%;
   height:100%;
+  display:inline-block;
+  position: absolute;
 }
 
 .table-container{
