added all pages to be built and header functionality

--- a/src/app/less/base/header.less
+++ b/src/app/less/base/header.less
@@ -19,6 +19,7 @@
 }
 
 .header-box-clicked{
+  .header-box;
   width: 100%;
   height:75px;
   -webkit-transition: width 1s, height 1s;
@@ -39,11 +40,6 @@
   position: absolute;
 }
 
-.table-container{
-  height:100%;
-  width:100%;
-  display:table;
-}
 
 .header-surround{
   vertical-align:middle;
