--- a/src/app/partials/cms.html
+++ b/src/app/partials/cms.html
@@ -1,3 +1,6 @@
-<div>
-    DISPLAY STUFF
+<div class = "table-container" ng-controller = "CmsCtrl">
+    <div class = "cms">
+        <a ng-href = "/manage-blog"><button> Manage Blog </button></a>
+        <a ng-href = "/manage-portfolio"><button> Manage Portfolio </button></a>
+    </div>
 </div>
