--- a/src/app/partials/manage-portfolio.html
+++ b/src/app/partials/manage-portfolio.html
@@ -21,9 +21,6 @@
                 </div>
             </form>
 
-            <div class = "portfolio-input">
-                <button ng-click = "check()">Check if worked</button>
-            </div>
         </div><div class = "new-project">
             <img ng-src = "../img/BuyABoat.jpg" class = "new-project-img">
             <h2 class = "project-text"><span class = "project-text-mod">{{siteName}}:<br />{{description}}</span></h2>
@@ -34,9 +31,9 @@
 
 
     <div class = "portfolio-projects">
-        <div class = "portfolio-project" ng-repeat = "temp in tempPort">
-            <img ng-src = "{{temp.img}}" class = "project-image">
-            <h2 class = "project-text"><span class = "project-text-mod">{{temp.title}}:<br />{{temp.description}}</span></h2>
+        <div class = "portfolio-project" ng-repeat = "project in recentProjects">
+            <img ng-src = "../img/BuyABoat.jpg" class = "project-image">
+            <h2 class = "project-text"><span class = "project-text-mod">{{project.siteName}}:<br />{{project.description}}</span></h2>
         </div>
     </div>
 
